fix: label .seoInputs label alignment

--- a/client/src/components/admin/ProductManagement/ProductForm/index.module.scss
+++ b/client/src/components/admin/ProductManagement/ProductForm/index.module.scss
@@ -28,6 +28,7 @@
 
   label {
     @include flexGap(16px, column);
+    align-items: start;
     width: 100%;
 
     input[type='text'] {
